Fixed up the title.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    Open Source Hackers CookBook (OSHCB)
+    <title>Open Source Hackers CookBook (OSHCB)</title>
   </head>
   <body>
     Starting with the challenge of a blank page :)
