Direct readers to the OSHCB Wiki.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<html>
-  <head>
-    <title>Open Source Hackers CookBook (OSHCB)</title>
-  </head>
-  <body>
-    Starting with the challenge of a blank page :)
-  </body>
-</html>
+<p>Please visit the
+<a href="https://github.com/geekscape/hackers_cookbook/wiki">Open Source Hackers Cook Book Wiki</a></p>
+
+<p>You can fork and contribute to the OSHCB Wiki by cloning the repository ...</p>
+
+<pre><code>git clone https://github.com/geekscape/hackers_cookbook.wiki.git
+</code></pre>
